# atmospheres

./: .gitignore  categories.ipynb  first_screening.ipynb  openai_eval.ipynb  openai_eval.py  pyproject.toml  test.ipynb  transform_data.ipynb
